Kompong Cham EDA

--- a/modelings/phnompenh_datamodelling_votana.ipynb
+++ b/modelings/phnompenh_datamodelling_votana.ipynb
@@ -88,237 +88,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 1,
    "id": "b20c06e3",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>date</th>\n",
-       "      <th>time</th>\n",
-       "      <th>water_content</th>\n",
-       "      <th>solar_radiation</th>\n",
-       "      <th>rain</th>\n",
-       "      <th>temperature</th>\n",
-       "      <th>rh</th>\n",
-       "      <th>wind_speed</th>\n",
-       "      <th>gust_speed</th>\n",
-       "      <th>wind_direction</th>\n",
-       "      <th>dew_point</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>20/11/01</td>\n",
-       "      <td>00:00:00</td>\n",
-       "      <td>0.3062</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>26.84</td>\n",
-       "      <td>94.8</td>\n",
-       "      <td>0.3</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>152.0</td>\n",
-       "      <td>25.97</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>20/11/01</td>\n",
-       "      <td>00:05:00</td>\n",
-       "      <td>0.3066</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>26.77</td>\n",
-       "      <td>94.7</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>152.0</td>\n",
-       "      <td>25.88</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>20/11/01</td>\n",
-       "      <td>00:10:00</td>\n",
-       "      <td>0.3066</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>26.72</td>\n",
-       "      <td>94.7</td>\n",
-       "      <td>0.3</td>\n",
-       "      <td>1.3</td>\n",
-       "      <td>154.0</td>\n",
-       "      <td>25.83</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>20/11/01</td>\n",
-       "      <td>00:15:00</td>\n",
-       "      <td>0.3066</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>26.65</td>\n",
-       "      <td>94.6</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>152.0</td>\n",
-       "      <td>25.74</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>20/11/01</td>\n",
-       "      <td>00:20:00</td>\n",
-       "      <td>0.3066</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>26.55</td>\n",
-       "      <td>94.7</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>152.0</td>\n",
-       "      <td>25.66</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>95</th>\n",
-       "      <td>20/11/01</td>\n",
-       "      <td>07:55:00</td>\n",
-       "      <td>0.3062</td>\n",
-       "      <td>339</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>28.34</td>\n",
-       "      <td>82.8</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>3.7</td>\n",
-       "      <td>53.0</td>\n",
-       "      <td>25.17</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>96</th>\n",
-       "      <td>20/11/01</td>\n",
-       "      <td>08:00:00</td>\n",
-       "      <td>0.3062</td>\n",
-       "      <td>357</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>28.67</td>\n",
-       "      <td>83.0</td>\n",
-       "      <td>1.3</td>\n",
-       "      <td>2.7</td>\n",
-       "      <td>51.0</td>\n",
-       "      <td>25.52</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>97</th>\n",
-       "      <td>20/11/01</td>\n",
-       "      <td>08:05:00</td>\n",
-       "      <td>0.3066</td>\n",
-       "      <td>359</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>28.64</td>\n",
-       "      <td>83.0</td>\n",
-       "      <td>1.7</td>\n",
-       "      <td>3.7</td>\n",
-       "      <td>63.0</td>\n",
-       "      <td>25.50</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>98</th>\n",
-       "      <td>20/11/01</td>\n",
-       "      <td>08:10:00</td>\n",
-       "      <td>0.3066</td>\n",
-       "      <td>283</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>28.74</td>\n",
-       "      <td>82.4</td>\n",
-       "      <td>1.7</td>\n",
-       "      <td>4.3</td>\n",
-       "      <td>49.0</td>\n",
-       "      <td>25.48</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>99</th>\n",
-       "      <td>20/11/01</td>\n",
-       "      <td>08:15:00</td>\n",
-       "      <td>0.3066</td>\n",
-       "      <td>393</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>29.04</td>\n",
-       "      <td>80.9</td>\n",
-       "      <td>1.3</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>38.0</td>\n",
-       "      <td>25.46</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>100 rows × 11 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "        date      time  water_content  solar_radiation  rain  temperature  \\\n",
-       "0   20/11/01  00:00:00         0.3062                1   0.0        26.84   \n",
-       "1   20/11/01  00:05:00         0.3066                1   0.0        26.77   \n",
-       "2   20/11/01  00:10:00         0.3066                1   0.0        26.72   \n",
-       "3   20/11/01  00:15:00         0.3066                1   0.0        26.65   \n",
-       "4   20/11/01  00:20:00         0.3066                1   0.0        26.55   \n",
-       "..       ...       ...            ...              ...   ...          ...   \n",
-       "95  20/11/01  07:55:00         0.3062              339   0.0        28.34   \n",
-       "96  20/11/01  08:00:00         0.3062              357   0.0        28.67   \n",
-       "97  20/11/01  08:05:00         0.3066              359   0.0        28.64   \n",
-       "98  20/11/01  08:10:00         0.3066              283   0.0        28.74   \n",
-       "99  20/11/01  08:15:00         0.3066              393   0.0        29.04   \n",
-       "\n",
-       "      rh  wind_speed  gust_speed  wind_direction  dew_point  \n",
-       "0   94.8         0.3         1.0           152.0      25.97  \n",
-       "1   94.7         0.0         1.0           152.0      25.88  \n",
-       "2   94.7         0.3         1.3           154.0      25.83  \n",
-       "3   94.6         0.0         0.0           152.0      25.74  \n",
-       "4   94.7         0.0         0.0           152.0      25.66  \n",
-       "..   ...         ...         ...             ...        ...  \n",
-       "95  82.8         2.0         3.7            53.0      25.17  \n",
-       "96  83.0         1.3         2.7            51.0      25.52  \n",
-       "97  83.0         1.7         3.7            63.0      25.50  \n",
-       "98  82.4         1.7         4.3            49.0      25.48  \n",
-       "99  80.9         1.3         3.0            38.0      25.46  \n",
-       "\n",
-       "[100 rows x 11 columns]"
-      ]
-     },
-     "execution_count": 182,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'pd' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_944/2030531995.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[1;31m# csv files in the path\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 7\u001b[1;33m \u001b[0mdata\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mread_csv\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mpath\u001b[0m \u001b[1;33m+\u001b[0m \u001b[1;34m\"/cleaned_dataset_phnom_penh.csv\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      8\u001b[0m \u001b[0mdata\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdrop\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"Unnamed: 0\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0minplace\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mTrue\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      9\u001b[0m \u001b[0mdata\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mhead\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m100\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'pd' is not defined"
+     ]
     }
    ],
    "source": [
